# poolkeeper

./: .firebaserc  .gitignore  Anchor.toml  Cargo.toml  README.md  firebase.json  package-lock.json  package.json  tsconfig.json  vault_manager.rs
backend/: cronjobs.js
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/public/: mockdata.json  mockdata_27_09.json  mockdata_29_09.json
frontend/public/.well-known/: farcaster.json
frontend/src/: App.vue  firebase.ts  globals.d.ts  main.ts
frontend/src/assets/: main.css
frontend/src/components/: AIBotVerdict.vue  ComingSoon.vue  ConnectWallet.vue  DropInButton.vue  Footer.vue  HelloWorld.vue  Logo.vue  TheWelcome.vue
frontend/src/lib/: database.types.ts  supabase.ts
frontend/src/router/: index.ts
frontend/src/utils/: lpUtils.ts
frontend/src/views/: AboutView.vue  BorrowView.vue  HomeView.vue  LearnMoreView.vue  LiquidityPoolDetailsView.vue  LiquidityPoolsView.vue  MiniAppHome.vue
programs/solana_sickle_vault/src/: lib.rs
programs/vault_manager/: Cargo.toml  vault_manager.rs
programs/vault_manager/src/: lib.rs
scripts/: deploy.ts  init-vault.ts
supabase/.temp/: pooler-url  project-ref
supabase/functions/DeFiLPSnapshot/: index.ts
supabase/functions/telegramBot/: index.ts
tests/: Anchor.toml  helpers.rs  tsconfig.json  vault_manager.ts  vault_managers.rs
