[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
borsh = "1.5"
bytemuck = { version = "1.24.0", features = ["derive"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
